# rtp

./: BUILD.gn  README.md  SConscript  main.c  makefile
adapter/cmsis/: rtp_mutex.c  rtp_sem.c  rtp_task.c
adapter/include/: tp_def.h
adapter/rtthread/: rtp_mutex.c  rtp_sem.c  rtp_task.c
adapter/source/cmsis/: tp_mutex_adapter.c  tp_sem_adapter.c  tp_thread_adapter.c
adapter/source/posix/: tp_mutex_adapter.c  tp_sem_adapter.c  tp_thread_adapter.c
core/include/: tp_manage.h
core/source/: tp_manage.c
include/: rtp.h  rtp_def.h
src/: rtp.c
