# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "core/source/tp_manage.c",
  ]

  if(ohos_kernel_type == "liteos_m") {
    sources += [
      "adapter/source/cmsis/emq_thread_adapter.c",
      "adapter/source/cmsis/emq_queue_adapter.c",
      "adapter/source/cmsis/emq_mutex_adapter.c",
      "adapter/source/cmsis/emq_sem_adapter.c",
      "adapter/source/cmsis/emq_time_adapter.c",
    ]
  }

  if(ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
    sources += [
      "adapter/source/posix/emq_thread_adapter.c",
      "adapter/source/posix/emq_queue_adapter.c",
      "adapter/source/posix/emq_mutex_adapter.c",
      "adapter/source/posix/emq_sem_adapter.c",
      "adapter/source/posix/emq_time_adapter.c",
      "adapter/source/posix/lock_free_queue.c",
    ]
  }

  include_dirs = [
    "core/include",
    "adapter/include",
  ]
}
